deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-19bytes
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
          - containerPort: 80
          volumeMounts:
          - mountPath: "/mnt/azure"
            name: volume
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: azure-managed-disk
