service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-19bytes
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 5000
